...
            app:indicatorName="BallScaleMultipleIndicator"
            app:indicatorColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
