...
            android:text="@string/no_video_message" />

    </FrameLayout>

    <!-- The Short Description -->
    <TextView
        android:id="@+id/step_detail_short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/twelve_dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/twenty_two_sp" />
...
